# Pomodoro

./: .gitignore  build-profile.json5  oh-package.json5  string.xml
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  timer_native.cpp
entry/src/main/cpp/types/libtimer_native/: Index.d.ts  oh-package.json5
entry/src/main/ets/components/: PomodoroTicker.ets  PomodoroTimer.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/model/: Pomodoro.ets  Setting.ets  ThemeColors.ets
entry/src/main/ets/pages/: DailyGoalPage.ets  DrawCircle.ets  HowToPage.ets  Index.ets  Pages.ets  PomodoroClockPage.ets  SettingPage.ets
entry/src/main/ets/styles/: SettingStyles.ets
entry/src/main/ets/utils/: BackgroundTaskUtils.ets  ColorUtils.ets  ContextUtil.ets  DateTimeUtils.ets  DrawingUtils.ets  LiveViewUtils.ets  LogUtil.ets  SoundUtils.ets  StringUtils.ets  WindowUtils.ets  WorkerUtils.ets
entry/src/main/ets/workers/: TimerWorker.ets
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/base/profile/: main_pages.json  router_map.json
entry/src/main/resources/zh_CN/element/: string.json
